k3s/mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: services-webhook
webhooks:
  - name: services-webhook.default.svc
    clientConfig:
      url: "https://127.0.0.1:8443/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGVENDQWYyZ0F3SUJBZ0lVWlA1bEZMMDlFcUhvRDZqRkZUVW1tUlN0Q04wd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF3d0thM1ZpWlhKdVpYUmxjekFlRncweU5UQTBNRGt4TWpBd01UaGFGdzB5TmpBMApNRGt4TWpBd01UaGFNQlV4RXpBUkJnTlZCQU1NQ210MVltVnlibVYwWlhNd2dnRWlNQTBHQ1NxR1NJYjNEUUVCCkFRVUFBNElCRHdBd2dnRUtBb0lCQVFEcHNLVTgvekpyR0VYU0IrRVhhY0FDWFlNMDlya2Z2b09HOXhoVFhBRS8KVjF4cjU2a1FsWmpvdkxSWXlQN0RoelRtZTdhdWtJVFNuYUtCQjBuQnBtTi9tNnIxd3Q0bjJTZG9qYk5MWklOcApWNE5RSXRkZE1R [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["services"]
        scope: "*"
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Fail
